<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/accel_sensor_value"
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="40dp"
        android:gravity="center"
        android:hint="@string/accel_sensor_message"/>
    <TextView android:id="@+id/gyro_sensor_value"
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="40dp"
        android:gravity="center"
        android:hint="@string/gyro_sensor_message"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/send_gyro_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/send_gyro_reading"
            android:onClick="sendGyroReading"/>
        <TextView android:id="@+id/sending_gyro_text"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/not_sending_gyro_text"/>
    </LinearLayout>
    <Button android:id="@+id/calc_latency_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/send_timing_message"
        android:onClick="sendTimingMessage"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="left|center"
            android:layout_height="fill_parent"
            android:text="@string/send_ip"/>
        <EditText android:id="@+id/ip_input"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/default_send_ip"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="left|center"
            android:layout_height="fill_parent"
            android:text="@string/send_port"/>
        <EditText android:id="@+id/port_input"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/default_send_port"/>
    </LinearLayout>
    <Button android:id="@+id/set_connection_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/set_connection_text"
        android:onClick="setConnectionDetails"/>
</LinearLayout>
